test/link/script-ds-overflow.link
rom0
	ds $4000 ; OK
	ds 1 ; Boom!

hram
	ds $7F ; OK
	ds $FFFF ; Boom!
